--- a/src/app/dashboard/video-list/video-list.component.html
+++ b/src/app/dashboard/video-list/video-list.component.html
@@ -1,5 +1,8 @@
 <ul>
-  <li *ngFor="let video of videoList">
+  <li
+    (click)="selectVideo(video)"
+    [class.selected]="video.id === selectedVideo?.id"
+    *ngFor="let video of videoList">
     {{video.author}} : {{video.title}}
   </li>
 </ul>
