--- a/src/app/dashboard/video-dashboard/video-dashboard.component.html
+++ b/src/app/dashboard/video-dashboard/video-dashboard.component.html
@@ -1,6 +1,6 @@
 <app-video-list
   (videoSelected)="onVideoSelected($event)"
-  [videoList]="videoListData"></app-video-list>
+  [videoList]="videoListData | async"></app-video-list>
 
 <app-video-player [video]="videoToDisplay"></app-video-player>
 <app-stat-filters></app-stat-filters>
